--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h1>Speaker Picks</h1>
 
   <section class="container" aria-label="Altec Lansing Speakers">
-    <h2 class="section-title">Altec Lansing Speakers</h2>
+    <h2 class="section-title">Altec Lansing</h2>
 
     <div class="item">
       <span class="rank">Best -</span>
@@ -89,7 +89,7 @@
   </section>
 
   <section class="container" aria-label="Name Brand Speakers">
-    <h2 class="section-title">Name Brand Speakers</h2>
+    <h2 class="section-title">JBL Speakers</h2>
 
     <div class="item">
       <span class="rank">Good -</span>
